update: (me) #25 Maintopic List API edit files - alternate List.of to Araays.asList - remove unnecessary imports and add used imports