@@ -1,5 +1,7 @@
 package com.application.discussion.project.infrastructure.seeds.topics;
 
+
+import java.util.Arrays;
 import java.util.List;
 
 import org.slf4j.Logger;
@@ -17,7 +19,7 @@ public class MaintopicDataSeeder {
 
     private static final Logger logger = LoggerFactory.getLogger(MaintopicDataSeeder.class);
 
-    private final List<Maintopics> maintopicsSeedList = List.of(
+    private final List<Maintopics> maintopicsSeedList = Arrays.asList(
         new Maintopics(null, "日本の政治体制の危うさについて", "日本の政治体制について議論する場所", null, null, false, false),
         new Maintopics(null, "古典・漢文を高校で学ぶ意義とはなにか", "社会にでれば全く役に立たない古典・漢文を日本の高校で勉強することの意義と問題を議論する場", null, null, false, false),
         new Maintopics(null, "日本政府の増税信仰について", "日本政府，とりわけ自民党が掲げる増税をなぜこの不景気のときに進めるのか，その対策を議論する場", null, null, false, false),
